--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "lint:report": "eslint . -f junit -o eslint-report.xml",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,css,md}\""
   },
@@ -29,6 +30,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-formatter-junit": "^9.0.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
