--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.23.0",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
